# Simple_TCP_Mail_Server_and_Client

./: README.md
client/: CMakeLists.txt  ClientHeader.h  ClientSource.cpp  JsonHandler.h  client.cpp
server/: CMakeLists.txt  ClientRequestHandler.cpp  ClientRequestHandler.h  JsonHandler.cpp  SQLiteDatabase.cpp  SQLiteDatabase.h  Server.cpp  ServerSocket.cpp  ServerSocket.h  email.db
